Fixed dark mode toggle to make entire page dark

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 html {
-  background-color: #d9d9d9;
   font-family: sans-serif;
 }
 
